<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_post_backgr"
    tools:context=".AddPost_page">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="17dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/textView13"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/textView14"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/done" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"
            android:divider="@drawable/linear_inner_space"
            android:showDividers="middle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView142"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="23dp"
                android:layout_marginBottom="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/pad" />
            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:ems="10"
                android:elevation="10dp"
                android:background="@drawable/edit_text_background"
                android:inputType="text"
                android:hint="@string/ett" />

            <EditText
                android:id="@+id/editTextText7"
                android:layout_width="350dp"
                android:layout_height="90dp"
                android:ems="10"
                android:elevation="10dp"
                android:background="@drawable/edit_text_background"
                android:inputType="text"
                android:hint="@string/d" />

            <EditText
                android:id="@+id/editTextText8"
                android:layout_width="350dp"
                android:elevation="10dp"
                android:background="@drawable/edit_text_background"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/add" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="23dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/ai" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:elevation="10dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/addimage" />

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/addimage" />
                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/addimage" />
                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/plus_icon" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:elevation="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginEnd="5dp"
                android:hint="@string/ad"
                android:inputType="text" />
            <EditText
                android:id="@+id/editTextText8e"
                android:layout_width="120dp"
                android:layout_marginStart="5dp"
                android:layout_height="50dp"
                android:ems="10"
                android:layout_weight="1"
                android:elevation="5dp"
                android:background="@drawable/edit_text_background"
                android:inputType="text"
                android:hint="@string/pwd" />
        </LinearLayout>
        <EditText
            android:id="@+id/editTextTexwt5"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:ems="10"
            android:elevation="10dp"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            android:hint="Company Details" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:elevation="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:background="@drawable/new_post_button"
                android:text="Deal-On"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textStyle="bold"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>